[project]
name = "mri-normalization-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cachetools>=4.2.2",
    "click>=8.0.0",
    "decorator>=5.0.7",
    "netgraph>=4.0.5",
    "networkx>=2.5",
    "pandas>=1.3.5",
    "pydicom<=2.4.4",
    "pyyaml>=5.3.1",
    "rich>=13.0.0",
    "simpleitk>=2.1.0",
    "tqdm>=4.0.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mnts-train = "mnts.scripts.normalization:run_graph_train"
mnts-infer = "mnts.scripts.normalization:run_graph_inference"
mnts-dicom2nii = "mnts.scripts.dicom2nii:console_entry"
mnts-organize = "mnts.scripts.organize_nifti:console_entry"
mnts-dcm-tagprint = "mnts.scripts.dicom_tag_printer:dicom_tag_printer_cli"
